--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           <li><a href="index.html"> Professional Resume</a></li>
           <li><a href="space.html">Space Fun Facts</a></li>
           <li><a href="chicago.html">Chicago Sports</a></li>
-          <li><a href="map.html">Chicago Sports</a></li>
+          <li><a href="map.html">Google Map</a></li>
         </ul>
       </div>
     </nav>
