--- a/map.html
+++ b/map.html
@@ -22,6 +22,6 @@
     </section>
     <section>
       <div id="map"></div>
-      <script src="https://maps.googleapis.com/maps/api/js?AIzaSyBM1F-BpX660SBK3-Vw9O9f7AEvTAIH8rI&callback=initMap"></script>
+      <script src="https://maps.googleapis.com/maps/api/js?AIzaSyBM1F-BpX660SBK3-Vw9O9f7AEvTAIH8rI&callback=initMap" async defer></script>
     </section>
   </body>
