--- a/map.html
+++ b/map.html
@@ -4,7 +4,7 @@
     <meta charset ="utf-8">
     <title>Project 1-Charles Haffner</title>
     <link rel="stylesheet" href="css/style.css">
-    <script async src="js/script.js"></script>
+    <script src="js/script.js"></script>
   </head>
   <body>
     <nav>
