--- a/map.html
+++ b/map.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset ="utf-8">
+    <meta name="viewport" content="initial-scale=1.0">
     <title>Project 1-Charles Haffner</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="js/script.js"></script>
