--- a/map.html
+++ b/map.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>Project 1-Charles Haffner</title>
     <meta charset ="utf-8">
     <meta name="viewport" content="initial-scale=1.0">
-    <title>Project 1-Charles Haffner</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="js/script.js"></script>
   </head>
@@ -23,6 +23,7 @@
     </section>
     <section>
       <div id="map"></div>
-      <script src="https://maps.googleapis.com/maps/api/js?AIzaSyBM1F-BpX660SBK3-Vw9O9f7AEvTAIH8rI&callback=initMap" async defer></script>
+      <script src="https://maps.googleapis.com/maps/api/js?AIzaSyBM1F-BpX660SBK3-Vw9O9f7AEvTAIH8rI&callback=initMap"
+      async defer></script>
     </section>
   </body>
