--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html lang="en">
   <head>
     <meta charset ="utf-8">
-    <meta name="viewport" content="initial-scale=1.0">
     <title>Project 1-Charles Haffner</title>
-    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
