--- a/map.html
+++ b/map.html
@@ -23,7 +23,6 @@
     </section>
     <section>
       <div id="map"></div>
-      <script src="https://maps.googleapis.com/maps/api/js?AIzaSyBM1F-BpX660SBK3-Vw9O9f7AEvTAIH8rI&callback=initMap"
-      async defer></script>
+      <iframe src="https://storage.googleapis.com/maps-solutions-9olqki9qjl/commutes/o99o/commutes.html" width="100" height="100"style="border:0;" loading="lazy"></iframe>
     </section>
   </body>
