--- a/map.html
+++ b/map.html
@@ -23,6 +23,10 @@
     </section>
     <section>
       <div id="map"></div>
-      <iframe src="https://storage.googleapis.com/maps-solutions-9olqki9qjl/commutes/o99o/commutes.html" width="100" height="100"style="border:0;" loading="lazy"></iframe>
+      <iframe src="https://storage.googleapis.com/maps-solutions-qcp8ybetbr/commutes/vq96/commutes.html"
+      width="100%" height="100%"
+      style="border:0;"
+      loading="lazy">
+      </iframe>
     </section>
   </body>
