--- a/map.html
+++ b/map.html
@@ -5,7 +5,7 @@
     <meta charset ="utf-8">
     <meta name="viewport" content="initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <script src="js/script.js"></script>
+    <script async src="js/script.js"></script>
   </head>
   <body>
     <nav>
