--- a/map.html
+++ b/map.html
@@ -22,11 +22,13 @@
       <h1>Google Maps</h1>
     </section>
     <section>
-      <div id="map"></div>
-      <iframe src="https://storage.googleapis.com/maps-solutions-qcp8ybetbr/commutes/vq96/commutes.html"
-      width="100%" height="100%"
-      style="border:0;"
-      loading="lazy">
-      </iframe>
+      <div id="map">
+        <iframe src="https://storage.googleapis.com/maps-solutions-qcp8ybetbr/commutes/vq96/commutes.html"
+        width="100%" height="100%"
+        style="border:0;"
+        loading="lazy">
+        </iframe>
+      </div>
+      <h3>Above you can see how far you are from where I worked.</h3>
     </section>
   </body>
