--- a/map.html
+++ b/map.html
@@ -6,6 +6,24 @@
     <meta name="viewport" content="initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <script async src="js/script.js"></script>
+    <style>
+      @media only screen and (max-width: 768px) {
+        font-size: 12px;
+        background-color: maroon;
+        #title {width: 100%}
+        #map-section {width: 100%}
+        #caption {width: 100%}
+      }
+
+      @media only screen and (min-width: 769px) {
+        font-size: 16px;
+        background-color: powderblue;
+        #title {width: 800px}
+        #map-section {width: 800px}
+        #caption {width: 800px}
+      }
+    
+    </style>
   </head>
   <body>
     <nav>
@@ -18,10 +36,10 @@
         </ul>
       </div>
     </nav>
-    <section>
+    <section id="title">
       <h1>Google Maps</h1>
     </section>
-    <section>
+    <section id="map-section">
       <div id="map">
         <iframe src="https://storage.googleapis.com/maps-solutions-qcp8ybetbr/commutes/vq96/commutes.html"
         width="100%" height="100%"
@@ -29,6 +47,8 @@
         loading="lazy">
         </iframe>
       </div>
+    </section>
+    <section id="caption">
       <h3>Above you can see how far you are from where I worked.</h3>
     </section>
   </body>
