--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </nav>
     <section>
       <h1>Resume of Charles Haffner</h1>
-      <img src="media/me.jpg" alt="Picture of me working on School hydroponic system"></img>
+      <img src="media/me.jpg" alt="Picture of me working on School hydroponic system">
     </section>
     <section>
       <h2>Objective:</h2>
