--- a/map.html
+++ b/map.html
@@ -8,17 +8,13 @@
     <script async src="js/script.js"></script>
     <style>
       @media only screen and (max-width: 768px) {
-        font-size: 12px;
-background-color: maroon;
-#title {width: 100%}
+        font-size: 12px; background-color: maroon;#title {width: 100%}
         #map-section {width: 100%}
         #caption {width: 100%}
       }
 
       @media only screen and (min-width: 769px) {
-      font-size: 16px;
-background-color: powderblue;
-#title {width: 800px}
+      font-size: 16px; background-color: powderblue; #title {width: 800px}
         #map-section {width: 800px}
         #caption {width: 800px}
       }
@@ -43,7 +39,7 @@ background-color: powderblue;
       <div id="map">
         <h1>Distance from Wilder Fields</h1>
         <iframe src="https://storage.googleapis.com/maps-solutions-qcp8ybetbr/commutes/vq96/commutes.html"
-        width="800px" height="600px"
+        width="800" height="600"
         style="border:0;"
         loading="lazy">
         </iframe>
