--- a/map.html
+++ b/map.html
@@ -8,13 +8,13 @@
     <script async src="js/script.js"></script>
     <style>
       @media only screen and (max-width: 768px) {
-        font-size: 12px;background-color: maroon;#title {width: 100%}
+        font-size: 12pxbackground-color: maroon#title {width: 100%}
         #map-section {width: 100%}
         #caption {width: 100%}
       }
 
       @media only screen and (min-width: 769px) {
-      font-size: 16px;background-color: powderblue;#title {width: 800px}
+      font-size: 16pxbackground-color: powderblue#title {width: 800px}
         #map-section {width: 800px}
         #caption {width: 800px}
       }
