--- a/map.html
+++ b/map.html
@@ -8,17 +8,21 @@
     <script async src="js/script.js"></script>
     <style>
       @media only screen and (max-width: 768px) {
+      body {
         font-size: 12px;
         background-color: maroon;
         color: black;
         text-decoration: none;
+        }
       }
 
       @media only screen and (min-width: 769px) {
-      font-size: 16px;
-      background-color: powderblue;
-      color: black;
-      text-decoration: italic;
+      body {
+        font-size: 16px;
+        background-color: powderblue;
+        color: black;
+        text-decoration: italic;
+        }
       }
     
     </style>
