--- a/map.html
+++ b/map.html
@@ -21,7 +21,7 @@
         font-size: 16px;
         background-color: powderblue;
         color: black;
-        text-decoration: italic;
+        font-weight: 300;
         }
       }
     
